作业: 不同GC测试记录